objects/Student_Program__c.object
<CustomObject>
    <description>This is an object is students/program roll up</description>
    <fields>
        <fullName>Amount_of_Time__c</fullName>
        <label>Total Time for Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator_Area__c</fullName>
        <formula>IF( ISBLANK( Section_del__r.Indicator_Area__c ) , &quot;&quot;,  ( Section_del__r.Indicator_Area__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intervention Session</label>
        <referenceTo>Intervention_Session__c</referenceTo>
        <relationshipLabel>Student/Programs</relationshipLabel>
        <relationshipName>Student_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Name</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Student/Programs</relationshipLabel>
        <relationshipName>Student_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>IF(  ISBLANK( Section_del__r.Program__c ) ,  &quot;&quot; ,   Section_del__r.Program__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student/Program</description>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Student/Programs</relationshipLabel>
        <relationshipName>Student_Programs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>Student/Program</description>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Student/Programs</relationshipLabel>
        <relationshipName>Student_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student/Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Student/Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student/Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>